@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-04-20T01:04:51Z",
-  "count_outdated" : 530,
-  "uniques_outdated" : 357,
+  "timestamp" : "2025-04-22T01:00:45Z",
+  "count_outdated" : 531,
+  "uniques_outdated" : 358,
   "count" : 532,
   "uniques" : 359,
   "clones" : [
-    {
-      "timestamp": "2025-04-07T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-04-19T00:00:00Z",
       "count": 1,
